--- a/PokerApplication/pom.xml
+++ b/PokerApplication/pom.xml
@@ -18,6 +18,13 @@
          <version>1.3</version>
          <scope>test</scope>
       </dependency>
+
+<dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.27.2.1</version>
+</dependency>
+
    </dependencies>
    <build>
       <plugins>
